fix: Fixed login/register page background color not consistent on smaller screens

--- a/client/src/components/Register/Register.module.scss
+++ b/client/src/components/Register/Register.module.scss
@@ -16,6 +16,7 @@
 
   .fullHeightPaddingFix {
     height: calc(100% + 1rem);
+    background: var(--backgroundColor0);
   }
 
   .inputLabel {
